# EPAM_Cpp

./: .gitignore  CMakeLists.txt  operatorOverloadComplex  playground.cpp
Memory_Mgmt/: task3MM.cpp  task4MM.cpp  task5MM.cpp
Module1/File-Handling/: task1FH.cpp  task2FH.cpp  task3FH.cpp  task4FH.cpp  task5FH.cpp
Module1/Pointers/: task1Pointers.cpp  task3Pointers.cpp  task6Pointers.c  task7Pointers.c
Module2/Memory_Mgmt/: task1MM.cpp  task2MM.cpp  task3MM.cpp
Module2/OOPtasks/: OOP tasks.slnx  OOP tasks.vcxproj  OOPtasks.cpp
Module2/encapsulationAbstrctionInheritnace/: Student.h  notes.cpp  task10EAI.cpp  task11EAI.cpp  task12EAI.cpp  task13EAI.cpp  task14EAI.cpp  task4EAI.cpp  task5EAI.cpp  task6EAI.cpp  task7EAI.cpp  task8EAI.cpp  task9EAI.cpp
Module3/: OperatorOverloading.cpp  TaskB1.cpp  task1M3.cpp  task2M3.cpp  task3M3.cpp  task4M3.cpp  task5M3.cpp  task6M3.cpp  task7M3.cpp  task8M3.cpp  task9M3.cpp  taskB10.cpp  taskB2.cpp  taskB3.cpp  taskB4.cpp  taskB5.cpp  taskB6.cpp  taskB7.cpp  taskB8.cpp  taskB9.cpp
Module5/: a.cpp
Module5/Variadictemplate/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Module5/namespaces/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
Module6/C++Idioms/: SmartPointerCyclicDeendency.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
Module6/auto,initilaiserList,rangeBase/: task1.cpp  task10.cpp  task11.cpp  task15.cpp  task3.cpp  task4.cpp
OOPtasks/: OOP tasks.vcxproj.filters  task3.cpp  task8.cpp
ayaan/: main.cpp  sample.cpp  sample.h
designPattern/: observer.cpp
encapsulationAbstrctionInheritnace/: main(task3).cpp  task1EAI.cpp  task2EAI.cpp  task3EAI.cpp  task4EAI.cpp
module10/: playground  task10  task10.cpp  task11  task11.cpp  task12  task12.cpp  task13  task13.cpp  task14  task14.cpp  task9  task9.cpp
module11CRT/: task1  task1.cpp  task11  task11.cpp  task12  task12.cpp  task3  task3.cpp
module8/: TASK10.CPP  task1.cpp  task13.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task7.cpp  task8.cpp  task9.cpp
module9/: task1.cpp  task13.cpp  task15.cpp  task6.cpp  task9.cpp
(+52 files in other folders)
